# exam

./: .clang-format  B_2064_斐波那契数列.py  InvPair.py  Test.py  comp_geo.py  dfs.py  mdf.py  stable_sort.py  temp  temp.c  test_run.py  显示Hello_world的代码.cpp
241124_aurora_3/: B_ab.py  C_A_A.py  D_Number_Place.py  F_Cardboard_for_Pictures.py  F_Cardboard_for_PicturesF_图片纸板.cpp  G_大臣的旅费.py  H_Building_an_Aquarium.py  J_トレジャーハント.py
25lq/: problem_2.7z  problem_3.7z  pyproject.toml
atcoder/: AT_abc_373_b_ABC_373_B_1_D_Keyboard.py  A_CBC.cpp  A_Doors_in_the_Center.py  A_Is_it_rated.py  A_Not_Acceptable.py  A_Not_Found.py  A_Welcome_to_AtCoder.py  B_Full_House_3.py  B_Grid_Rotation.py  B_Interactive_Sorting.py  B_Not_All.py  B_Product_Calculator.py  B_Restaurant_Queue.cpp  C.py  C_Cycle_Graph.py  C_Dislike_Foods.cpp  (+11 more)
aurora_2025_1_2/: p2293.py  pyproject.toml  runner.py  test.py
aurora_2025_1_2/answer/UPC-A码/: Main.cpp  Main.java
aurora_2025_1_2/answer/三角函数/: Main.cpp  Main.java
aurora_2025_1_2/answer/买杏仁水/: main.py
aurora_2025_1_2/answer/查找/: main.py
aurora_2025_1_2/answer/简易计算器/: Main.cpp  Main.java
aurora_2025_1_2/checkpoint/UPC-A码/: data_gen.py  main.py  problem.json
aurora_2025_1_2/checkpoint/三角函数/: main.py  problem.json
aurora_2025_1_2/checkpoint/买杏仁水/: main.py  problem.json
aurora_2025_1_2/checkpoint/查找/: data_gen.py  main copy.py  main.cpp  main.py  problem.json
aurora_2025_1_2/checkpoint/简易计算器/: problem.json
aurora_2025_1_2/checkpoint/这太糖了/: main.py  problem.json
aurora_2025_1_2/md/: UPC-A码.md  三角函数.md  排队看病.md  查找.md  简易计算器.md  这太糖了.md
(+858 files in other folders)
