[project]
name = "aurora-2025-1-2"
version = "0.1.0"
description = ""
authors = [
    {name = "hsn",email = "hsn1919810@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
